# stacktrace

./: Cargo.toml  README.md  Trunk.toml  deny.toml  index.html
.github/workflows/: ci.yml  pages.yml
crate/stacetrace/: Cargo.toml
crate/stacetrace/src/: lib.rs
crate/stacktrace/: Cargo.toml
crate/stacktrace/src/: group.rs  group_or_segment.rs  lib.rs  line.rs  line.rs.backup.rs  prefix.rs  render_mode.rs  section.rs  segment.rs  stacktrace.rs
playground/: Cargo.toml  index.html
playground/src/: app.rs
src/: app.rs  main.rs
style/: tailwind.config.js
