[workspace]
members = [
    "crate/*",
    "playground",
]

[workspace.dependencies]
axum = "0.7"
console_error_panic_hook = "0.1"
http = "1"
leptos = "0.7.0"
leptos_axum = "0.7.0"
leptos_dom = "0.7.0"
leptos_meta = "0.7.0"
leptos_router = "0.7.0"
thiserror = "1"
tokio = "1"
tower = "0.4"
tower-http = "0.5"
wasm-bindgen = "=0.2.99"
