[package]
name = "stacktrace"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
flat_string = { workspace = true }
smallvec = { workspace = true }
